--- a/src/templates/ndpp_t.xml
+++ b/src/templates/ndpp_t.xml
@@ -12,4 +12,5 @@
   <variable name="library_name_" tag="library_name" type="word" length="255" />
   <variable name="output_format_" tag="output_format" type="word" length="6" />
   <variable name="thinning_tol_" tag="thinning_tol" type="double" default="0.2" />
+  <variable name="print_tol_" tag="print_tol" type="double" default="1.0E-8"/>
 </template>
