--- a/src/templates/ndpp_t.xml
+++ b/src/templates/ndpp_t.xml
@@ -14,4 +14,5 @@
   <variable name="thinning_tol_" tag="thinning_tol" type="double" default="0.2" />
   <variable name="print_tol_" tag="print_tol" type="double" default="1.0E-8"/>
   <variable name="freegas_cutoff_" tag="freegas_cutoff" type="double" default="400.0" />
+  <variable name="threads_" tag="threads" type="integer" />
 </template>
